# SunPath

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix
docs/: restructure.md
examples/assets/: ReflectionRoom3.glb  Room2.glb  Room3.glb
examples/window/: main.rs  swapchain.rs
shaders/: any_hit.glsl  brdf.glsl  closest_hit.glsl  common.glsl  denoise.glsl  postprocess.glsl  ray_gen.glsl  ray_gen_final.glsl  ray_gen_ris.glsl  ray_miss.glsl  restir.glsl  temporal_accumulation.glsl  utils.glsl
src/: camera.rs  error.rs  lib.rs  scene.rs  utils.rs
src/render_graph/: graph.rs  mod.rs
src/vulkan_abstraction/: compute_pipeline.rs  denoise_pipeline.rs  descriptor_set.rs  entity.rs  mod.rs  queue.rs  ray_tracing_pipeline.rs  resource_manager.rs  shader_binding_table.rs  shader_data_buffers.rs
src/vulkan_abstraction/acceleration_structure/: blas.rs  mod.rs  tlas.rs
src/vulkan_abstraction/buffer/: arena_core.rs  arena_gpu.rs  arena_host.rs  arena_keyed.rs  gpu_only_buffer.rs  index_buffer.rs  mod.rs  staging_buffer.rs  uniform_buffer.rs  vertex_buffer.rs
src/vulkan_abstraction/cmd_pool/: cmd_buffer.rs  mod.rs
src/vulkan_abstraction/core/: device.rs  mod.rs
src/vulkan_abstraction/descriptor_sets/: denoise_descriptor_set.rs  mod.rs  postprocess_descriptor_set.rs  raytracing_descriptor_set.rs  temporal_accumulation_descriptor_set.rs
src/vulkan_abstraction/gltf/: emissive_triangle.rs  material.rs  mod.rs  primitive.rs  vertex.rs
src/vulkan_abstraction/image/: mod.rs
src/vulkan_abstraction/resources/: entity.rs  material.rs  matrices_buffer_contents.rs  mod.rs  reservoir.rs
