[package]
name = "sunray"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "hardware ray-tracing library"
repository = "https://github.com/Kalsifer-742/sunray.git"
readme = "README.md"
keywords = ["graphics", "rendering", "gamedev"]
categories = ["multimedia", "graphics", "hardware-support", "game-development"]
exclude = ["examples/assets/Lantern.glb", "examples/.gitignore", ".gitignore"]

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
nalgebra = "0.34"
gltf = { version = "1.4.1", features = ["KHR_lights_punctual", "KHR_materials_emissive_strength"] }
log = { version = "0.4.28", features = ["release_max_level_warn"] }
gpu-allocator = "0.28.0"
bytemuck = "1.24.0"

[build-dependencies]
shaderc = "0.9"

[dev-dependencies]
winit = { version = "0.30.9", features = ["rwh_05"] } #window example
log4rs = "1.4.0" #logging for examples
image = "0.25.8" #png example

[[example]]
name = "png"

[[example]]
name = "window"
