[package]
name = "sunray"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "hardware ray-tracing library"
repository = "https://github.com/Kalsifer-742/sunray.git"
readme = "README.md"
keywords = ["graphics", "rendering", "gamedev"]
categories = ["multimedia", "graphics", "hardware-support", "game-development"]
exclude = ["examples/assets/Lantern.glb", "examples/.gitignore", ".gitignore"]

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
nalgebra = "0.34"
gltf = { version = "1.4.1", features = ["KHR_lights_punctual", "KHR_materials_emissive_strength", "KHR_materials_transmission", "KHR_materials_ior"] }
log = { version = "0.4.28", features = ["release_max_level_warn"] }
gpu-allocator = "0.28.0"
bytemuck = "1.24.0"
parking_lot = "0.12.5"
image = "0.25.8"
rand = "0.10.1"
#na = "0.32.2"


[build-dependencies]
shaderc = "0.10.1"

[dev-dependencies]
winit = { version = "0.30.13", features = ["rwh_05" , "wayland"] } #window example
log4rs = "1.4.0" #logging for examples
image = "0.25.8" #png example

[[example]]
name = "png"

[[example]]
name = "window"
